[tool.black]
line-length = 79
exclude = "scripts/example.py|.venv"

[tool.isort]
line-length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip_glob = "*.md"
filter_files = true
exclude = "scripts/example.py"

[tool.poetry]
name = "flirextractor"
version = "1.0.0"
description = "An efficient GPLv3-licensed Python package for extracting temperature data from FLIR IRT images."
authors = ["Alois Klink <alois.klink@gmail.com>"]
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/aloisklink/flirextractor"
homepage = "https://github.com/aloisklink/flirextractor"
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
]

[tool.poetry.dependencies]
python = "^3.6"
pyexiftool = "^0.1.1"
pillow = "^6.2"
numpy = "^1.17"

[tool.poetry.dev-dependencies]
black = {git = "https://github.com/psf/black.git", tag = "19.3b0"}
mypy = "^0.740.0"
flake8 = "^3.7"
pytest = "^5.2"
tomlkit = "^0.5.8"
isort = "^4.3.21"
pre-commit = "^1.20.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
